objects/ASI_CRM_Visual_Application__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Supplier</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visual Applications (Agency)</relationshipLabel>
        <relationshipName>ASI_CRM_Visual_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (CN)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Visual Applications</relationshipLabel>
        <relationshipName>ASI_CRM_Visual_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <formula>ASI_CRM_Outlet__r.ASI_CRM_CN_CCity__r.ASI_CRM_CN_Area__r.ASI_CRM_Division__r.ASI_CRM_Region__r.Name</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Channel__c</fullName>
        <formula>ASI_CRM_Outlet__r.ASI_CRM_CN_Sub_Channel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Visual_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Visual Application</label>
    <listViews>
        <fullName>ASI_CRM_CN_All_Visual_Application</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_Agency__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Sub_Channel__c</columns>
        <columns>ASI_CRM_Issue_Date__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All CN Visual Application</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_My_Visual_Application</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_Agency__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Sub_Channel__c</columns>
        <columns>ASI_CRM_Issue_Date__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My CN Visual Application</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>VIS-{000000}</displayFormat>
        <label>Visual Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visual Applications</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Visual_Application</fullName>
        <active>true</active>
        <label>ASI CRM CN Visual Application</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>